--- a/website/public/products/index.html
+++ b/website/public/products/index.html
@@ -37,7 +37,7 @@
     "@type": "WebPage",
     "url" : "http://localhost:1313/website/products/",
     "name": "Products",
-    "description": "Smart health monitoring wearable device",
+    "description": "SH+ - Smart Healthcare Plus - The ultimate health monitoring solution",
     "image" : "http://localhost:1313/website/apple-touch-icon.png",
     "author": {
       "@type": "Person",
